--- a/pages/AddPersonAddressBook.html
+++ b/pages/AddPersonAddressBook.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/new_addressbook.css">
     <title>Addressbook</title>
 </head>
 
@@ -16,10 +16,16 @@
             <img src="../assets/aadressbookimage.png" alt="logo">
             <div><span class=" book-text">ADDRESS</span><br>
                 <span class="book-text add-book">BOOK</span>
-
+                
             </div>
         </div>
     </header>
+    <div class="form-content">
+        <form class="form" action="#">
+            <div class="form-head">
+                PERSON ADDRESS FORM
+                <span class="close">&times;</span>
+            </div>
     </div>
 </body>
 
