--- a/pages/AddPersonAddressBook.html
+++ b/pages/AddPersonAddressBook.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Address Book Practice</title>
+    <title>Addressbook Practice</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap">
     <link rel="stylesheet" href="../css/new_addressbook.css">
     <script type="text/javascript" src="../js/AddFormValidation.js"></script>
     <script type="text/javascript" src="../js/AddressBook.js"></script>
+    <script type="text/javascript" src="../js/site_properties.js"></script>
 </head>
 <style>
 
@@ -55,34 +56,37 @@
                     <div class="label-city">
                         <label class="city" for="city">City</label><br>&nbsp;
                         <select id="city" name="city">
-                        <option value="0">Select City</option>
-                        <option value="1 ">Ambala</option>
-                        <option value="2 ">Gurgaon</option>
-                        <option value="3 ">Noida</option>
-                        <option value="4 ">Shimla</option>
-                        <option value="5 ">Chennai</option>  
-                    </select>
+                            <option value="0">Select City</option>
+                            <option value="1 ">Ambala</option>
+                            <option value="2 ">Gurgaon</option>
+                            <option value="3 ">Noida</option>
+                            <option value="4 ">Shimla</option>
+                            <option value="5 ">Chennai</option>
+                        </select>
                     </div>
                     <div class="label-state">
                         <label class="state" for="state">State</label><br>&nbsp;
                         <select id="state" name="state">
-                        <option value="">Select State</option>
-                        <option value="Haryana">Haryana</option>
-                        <option value="Punjab">Punjab</option>
-                        <option value="Uttar Pradesh">Uttar Pradesh</option>
-                        <option value="Himachal Pradesh">Himachal Pradesh</option>
-                        <option value="Tamilnadu">Tamilnadu</option>
-                    </select>
+                            <option value="">Select State</option>
+                            <option value="Haryana">Haryana</option>
+                            <option value="Punjab">Punjab</option>
+                            <option value="Uttar Pradesh">Uttar Pradesh</option>
+                            <option value="Himachal Pradesh">Himachal Pradesh</option>
+                            <option value="Tamilnadu">Tamilnadu</option>
+                        </select>
                     </div>
                     <div class="label-zip">
                         <label class="zip" for="zipcode">Zipcode</label></br>&nbsp;
                         <input class="input" id="zipcode " name="zipcode" placeholder="Enter zipcode here"></input>
                     </div>
                 </div>
+                <!-- UC5 Add submit and reset button at the end of the form-->
+                <div class="add-reset">
+                    <button type="submit" class="addButton" id="addButton">Submit</button>
+                    <button type="reset" class="resetButton" id="resetButton">Reset</button>
+                </div>
 
-               
             </div>
-
         </form>
     </div>
 
@@ -91,4 +95,3 @@
 </body>
 
 </html>
-   
