Added: On clicking submit button to to capture the user entry and saving to local storage

--- a/pages/AddPersonAddressBook.html
+++ b/pages/AddPersonAddressBook.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,7 +35,9 @@
             <div class="form-head">
                 <span class="form-head-text">PERSON ADDRESS FORM</span>
                 <span class="cross-icon">
-                    <ion-icon class="close-circle" name="close-circle"></ion-icon>
+                    <ion-icon class="close-circle" name="close-circle">
+                        <a href="../html/AddPersonAddressBook.html"></a> 
+                    </ion-icon>
                 </span>
             </div>
 
@@ -56,28 +59,29 @@
                     <div class="label-city">
                         <label class="city" for="city">City</label><br>&nbsp;
                         <select id="city" name="city">
-                            <option value="0">Select City</option>
-                            <option value="1 ">Ambala</option>
-                            <option value="2 ">Gurgaon</option>
-                            <option value="3 ">Noida</option>
-                            <option value="4 ">Shimla</option>
-                            <option value="5 ">Chennai</option>
+                        <option value="">Select City</option>
+                        <option value="1">Pune</option>
+                        <option value="2">Betul</option>
+                        <option value="3">Bhopal</option>
+                        <option value="4">Indore</option>
+                        <option value="5">Bilaspur</option>
+                        <option value="6">Jabalpur</option>
+                        <option value="7">Raipur</option>
+                        <option value="8">Durg</option>
                         </select>
                     </div>
                     <div class="label-state">
                         <label class="state" for="state">State</label><br>&nbsp;
                         <select id="state" name="state">
-                            <option value="">Select State</option>
-                            <option value="Haryana">Haryana</option>
-                            <option value="Punjab">Punjab</option>
-                            <option value="Uttar Pradesh">Uttar Pradesh</option>
-                            <option value="Himachal Pradesh">Himachal Pradesh</option>
-                            <option value="Tamilnadu">Tamilnadu</option>
+                        <option value="">Select State</option>
+                        <option value="1">Maharashtra</option>
+                        <option value="2">Madhya Pradesh</option>
+                        <option value="3">Chhattisgarh</option>
                         </select>
                     </div>
                     <div class="label-zip">
                         <label class="zip" for="zipcode">Zipcode</label></br>&nbsp;
-                        <input class="input" id="zipcode " name="zipcode" placeholder="Enter zipcode here"></input>
+                        <input class="input" id="zipcode " name="zipcode"></input>
                     </div>
                 </div>
                 <!-- UC5 Add submit and reset button at the end of the form-->
