Added: Create the Page Header for the Home Page

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Address Book Home Page</title>
-        <link rel="stylesheet" href="../css/new_home.css">
-        <link
-            href="https://fonts.googleapis.com/css?family=Montserrat:ital,wghte,
-            108; 0,200;0,308;0,480;0,600; 1,5086display=swap"
-            rel="stylesheet">
-        <link
-            href="https://fonts.googleapis.com/css?family=Roboto:ught2380;408;500;6ee6display=suap"
-            rel="stylesheet">
-    </head>
-    <body>
-        <header class="header-content header">
-            <div class="logo-content">
-                <img src="../assets/logo-add.jpg" width="5%" height="5%" alt="Logo Image">
-                <div>
-                    <span class="emp-text">ADDRESS</span>
-                    <span class="emp-text emp-payroll">BOOK</span>
-                </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>homePage</title>
+    <link rel="stylesheet" href="../css/home.css">
+    <script type="text/JavaScript" src="../js/site_properties.js"></script>
+</head>
+<body>
+     <!-- UC1 Begin with creating an Address Book Form UI-->
+     <header class="header-content header">
+        <div class="logo-content">
+            <img src="../assets/aadressbookimage.png" alt="logo">
+            <div>
+                <span class="book-text">ADDRESS</span><br>
+                <span class="book-text add-book">BOOK</span>
             </div>
-        </header>
-    </body>
+        </div>
+    </header>
+</body>
 </html>
