Added: Ability to Content Header

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,4 +20,19 @@
         </div>
     </header>
 </body>
+<div class="main-content">
+    <div class="sub-header-content sub-main-content">
+        <div class="person-detail-text">
+            Person Details
+            <div class="person-count">0</div>
+        </div>
+        <div onclick="location.href='./AddPersonAddressBook.html'" class="add-button">
+            <div class="plus-icon">
+                <img src="../assets/add-24px.svg" alt="Add User Logo">
+            </div>
+            <div>Add Person</div>
+        </div>
+    </div>
+</body>
+
 </html>
