--- a/pages/home.html
+++ b/pages/home.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homePage</title>
+    <title>Home Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap">
     <link rel="stylesheet" href="../css/home.css">
     <script type="text/JavaScript" src="../js/site_properties.js"></script>
+    <script type="text/JavaScript" src="../js/home.js"></script>
 </head>
+
 <body>
-     <!-- UC1 Begin with creating an Address Book Form UI-->
-     <header class="header-content header">
+    <header class="header-content header">
         <div class="logo-content">
+            <a href="./AddPersonAddressBook.html"></a>
             <img src="../assets/aadressbookimage.png" alt="logo">
             <div>
                 <span class="book-text">ADDRESS</span><br>
@@ -19,20 +23,46 @@
             </div>
         </div>
     </header>
-</body>
-<div class="main-content">
-    <div class="sub-header-content sub-main-content">
-        <div class="person-detail-text">
-            Person Details
-            <div class="person-count">0</div>
-        </div>
-        <div onclick="location.href='./AddPersonAddressBook.html'" class="add-button">
-            <div class="plus-icon">
-                <img src="../assets/add-24px.svg" alt="Add User Logo">
+    <div class="main-content">
+        <div class="sub-header-content sub-main-content">
+            <div class="person-detail-text">
+                Person Details
+                <div class="person-count">0</div>
             </div>
-            <div>Add Person</div>
+            <div onclick="location.href='./AddPersonAddressBook.html'" class="add-button">
+                <div class="plus-icon">
+                    <img src="../assets/add-24px.svg" alt="Add User Logo">
+                </div>
+                <div>Add Person</div>
+            </div>
+        </div>
+        <div class="table-main">
+            <table class="table" id="display">
+                <tr>
+                    <th>Fullname</th>
+                    <th>Phone Number</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Zipcode</th>
+                    <th>Address</th>
+                    <th>Actions</th>
+                </tr>
+                <tr>
+                    <td>Neta Mounik</td>
+                    <td>+91-8269066324</td>
+                    <td>Kailaspur</td>
+                    <td>Telangana</td>
+                    <td>500001</td>
+                    <td>Darusalam</td>
+                    <td>
+                        <img alt="edit" src="../assets/create-black-18dp.svg">
+                        <img alt="delete" src="../assets/delete-black-18dp.svg">
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
+
 </body>
 
 </html>
